--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,19 @@ html{
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 20px;
+    padding: 10px 20px;
     background-color: #103e6f;
     color: white;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
 }
 
 .navbar-logo img {
@@ -105,4 +108,64 @@ body {
 .footer-logo img {
     width: 70px; /* Ajusta el tamaño de la imagen según lo necesites */
     height: auto;
+}
+
+
+/* Botón de WhatsApp flotante */
+.whatsapp-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.whatsapp-button {
+    background-color: #25d366;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.whatsapp-button img {
+    width: 35px;
+    height: 35px;
+}
+
+.whatsapp-button:hover {
+    background-color: #1ebe57;
+}
+
+/* Menú desplegable de WhatsApp */
+.whatsapp-menu {
+    position: absolute;
+    bottom: 70px;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    width: 250px;
+}
+
+.whatsapp-menu a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 14px;
+    padding: 8px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.whatsapp-menu a:hover {
+    background-color: #f1f1f1;
 }
