--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,12 @@ body {
     bottom: 20px;
     right: 20px;
     z-index: 1000;
+    display: flex;
+    transition: bottom 0.3s ease-in-out;
+}
+
+.whatsapp-container.no-transition {
+    transition: none; /* Desactiva la transición temporalmente */
 }
 
 .whatsapp-button {
