--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     padding: 30px 20px;
     margin-top: 200px;
     margin-bottom: -50px;
-    background-color: #ffffff;
+    background-color: #f4f8fc;
 }
 
 .about-us-box {
