--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 .image-section {
     position: relative;
     width: 100%;
-    height: 100vh; /* Hace que la imagen ocupe todo el alto de la pantalla */
+    height: 90vh;
 }
 
 .background-image {
@@ -10,55 +10,60 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Asegura que la imagen cubra toda la sección */
-    z-index: -1; /* Asegura que la imagen quede en el fondo */
+    object-fit: cover;
+    z-index: -1;
+    filter: brightness(0.7); 
 }
 
 .content {
-    position: absolute; /* Posiciona el contenido respecto a la imagen */
-    bottom: 20px; /* Ubica el contenido a 20px del borde inferior */
-    left: 20px; /* Ubica el contenido a 20px del borde izquierdo */
+    position: absolute;
+    bottom: 30px;
+    left: 40px;
+    color: white;
     text-align: left;
-    color: white; /* Cambia el color del texto según tu preferencia */
-    z-index: 1; /* Asegura que el contenido esté encima de la imagen */
+    z-index: 1;
 }
 
 h2 {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin: 0;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 button {
-    padding: 10px 20px;
+    padding: 12px 24px;
     background-color: #7399cc;
-    margin-top: 10px;
     color: white;
     border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    border-radius: 5px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 1rem;
-    transition: background-color 0.3s;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 button:hover {
     background-color: #103e6f;
+    transform: translateY(-3px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .about {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
+    background-color: #f9f9f9; 
+    color: #333333;
     text-align: center;
+    padding: 50px 20px;
 }
 
 .about p {
-    font-size: 3.2rem;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    margin: 20px 0;
     font-family: 'Courier New', Courier, monospace;
-    margin-top: 50px;
-    margin-bottom: -40px;
-    padding: 40px;
+    color: #555555;
 }
+
 
 /* Responsivo */
 @media (max-width: 1500px) {
