--- a/css/contact.css
+++ b/css/contact.css
@@ -8,7 +8,7 @@
 .contact-section h2 {
     font-size: 2rem;
     margin-bottom: 10px;
-    color: #333;
+    color: #103e6f;
 }
 
 .contact-section p {
