--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,7 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
-    filter: brightness(0.7); 
+    filter: brightness(0.7);
 }
 
 .content {
@@ -32,38 +32,38 @@ h2 {
 }
 
 button {
-    padding: 12px 24px;
-    background-color: #7399cc;
+    background-color: #163B6D; 
     color: white;
     border: none;
-    border-radius: 5px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1rem;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: background-color 0.3s, transform 0.2s; 
+    font-size: 1rem;
+    padding: 12px 24px; 
+    border-radius: 5px; 
+    font-family: 'Arial', sans-serif; 
 }
 
 button:hover {
-    background-color: #103e6f;
-    transform: translateY(-3px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    background-color: #122c52; 
+    transform: scale(1.02); 
+    box-shadow: none; 
 }
 
 .about {
-    background-color: #f9f9f9; 
+    background-color: #f9f9f9;
     color: #333333;
     text-align: center;
     padding: 50px 20px;
+    margin: 0; 
 }
 
 .about p {
     font-size: 1.8rem;
     line-height: 1.5;
-    margin: 20px 0;
+    margin: 0; 
     font-family: 'Courier New', Courier, monospace;
     color: #555555;
 }
-
 
 /* Responsivo */
 @media (max-width: 1500px) {
@@ -75,7 +75,5 @@ button:hover {
     }
     .about p {
         font-size: 1.5rem;
-        margin-top: 20px;
-        margin-bottom: 10px;
     }
 }
