--- a/css/home.css
+++ b/css/home.css
@@ -50,7 +50,7 @@ button:hover {
 }
 
 .about {
-    background-color: #f9f9f9;
+    background-color: #f4f8fc;
     color: #333333;
     text-align: center;
     padding: 50px 20px;
